# autopulse

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.src  LICENSE  README.md  ca_profile.xml  cliff.toml  default.toml  diesel.toml  docker-compose.yml  docker-entrypoint.sh  flake.nix  lefthook.yml  list.txt  release-plz.toml  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/: release.yml  renovate.json
.github/workflows/: cleanup-pr.yml  continuous-delivery-docker.yml  continuous-delivery.yml  continuous-integration.yml  docs.yml  release.yml
assets/: docs.css
crates/database/: Cargo.toml
crates/database/migrations/mysql/2024-08-29-125750_create_scan_events/: up.sql
crates/database/migrations/mysql/2024-09-05-143749_add_index/: down.sql  up.sql
crates/database/migrations/mysql/2024-09-06-161345_database_agnostic/: down.sql  up.sql
crates/database/migrations/mysql/2024-10-12-130403_add_timer/: down.sql  up.sql
crates/database/migrations/mysql/2024-12-05-114500_already_found_index/: down.sql  up.sql
crates/database/migrations/mysql/2024-12-05-115656_process_index/: down.sql  up.sql
crates/database/migrations/mysql/2025-12-30-000546-0000_found_index/: down.sql  up.sql
crates/database/migrations/postgres/2024-09-05-143749_add_index/: up.sql
crates/database/migrations/postgres/2024-10-12-130403_add_timer/: down.sql
crates/database/migrations/postgres/2024-12-05-114645_already_found_index/: up.sql
crates/database/migrations/postgres/2024-12-05-115656_process_index/: down.sql  up.sql
crates/database/migrations/postgres/2025-12-30-000546-0000_found_index/: down.sql  up.sql
crates/database/migrations/postgres/2026-05-19-000001_create_app_state/: up.sql
crates/database/migrations/postgres/2026-05-30-000001_dedupe_pending_partial_index/: down.sql  up.sql
crates/database/migrations/sqlite/2024-08-29-125750_create_scan_events/: up.sql
crates/database/migrations/sqlite/2024-12-05-114327_already_found_index/: down.sql  up.sql
crates/database/migrations/sqlite/2025-12-30-000546-0000_found_index/: down.sql
crates/database/migrations/sqlite/2026-05-19-000001_create_app_state/: down.sql  up.sql
crates/database/migrations/sqlite/2026-05-30-000001_dedupe_pending_partial_index/: up.sql
crates/database/src/: build.rs  conn.rs  lib.rs  models.rs  schema.rs
crates/server/: Cargo.toml  Icondata.toml
crates/server/src/: build.rs  lib.rs
crates/server/src/middleware/: auth.rs
crates/server/src/routes/: config.rs  health.rs  index.rs  list.rs  login.rs  mod.rs  stats.rs  status.rs  triggers.rs
crates/server/src/tests/middleware/: check_auth.rs
crates/server/src/tests/routes/: config.rs.bak  public_endpoints.rs  triggers.rs
crates/server/src/ui/: add.rs  auth.rs  config.rs  csrf.rs  detail.rs  events.rs  events_view.rs  layout.rs  mod.rs  session_key.rs  static_assets.rs  stream.rs
crates/server/static/: app.css
crates/service/: Cargo.toml
crates/service/src/: lib.rs  manager.rs  runner.rs
crates/service/src/settings/: app.rs  auth.rs  mod.rs  opts.rs  path_filter.rs  timer.rs
crates/service/src/settings/targets/: audiobookshelf.rs  autopulse.rs  command.rs  emby.rs  fileflows.rs  mod.rs  plex.rs  radarr.rs  silo.rs  sonarr.rs  tdarr.rs
crates/service/src/settings/triggers/: a_train.rs  autoscan.rs  lidarr.rs  manual.rs  mod.rs  notify.rs  radarr.rs  readarr.rs  sonarr.rs
crates/service/src/settings/webhooks/: discord.rs  hookshot.rs  json.rs  manager.rs  mod.rs  transport.rs
crates/service/src/tests/: manager_add_event.rs  util.rs
crates/service/src/tests/settings/: ensure_atrain_alias.rs  mod.rs
crates/service/src/tests/targets/: mod.rs  path_filter.rs  plex.rs
crates/service/src/tests/triggers/: a_train.rs  lidarr.rs  mod.rs  notify.rs  path_filter.rs  radarr.rs  readarr.rs  sonarr.rs
crates/utils/: Cargo.toml
crates/utils/src/: checksum.rs  get_url.rs  lib.rs  logs.rs  rewrite.rs  task_manager.rs  what_is.rs
crates/utils/src/tests/: checksum.rs  generate_uuid.rs  get_url.rs  join_path.rs  mod.rs  rewrite.rs  sify.rs  what_is.rs
example/: config.toml  config.yaml  docker-compose-sqlite.yml  docker-compose.yml
migrations/2024-08-29-125750_create_scan_events/: down.sql  up.sql
migrations/2024-09-05-143749_add_index/: down.sql
migrations/2024-10-12-130403_add_timer/: up.sql
migrations/mysql/2024-09-06-161345_database_agnostic/: up.sql
migrations/postgres/2024-08-29-125750_create_scan_events/: down.sql
src/: build.rs  main.rs
src/db/: conn.rs  migration.rs  mod.rs  models.rs  schema.rs
src/routes/: index.rs  list.rs  login.rs  mod.rs  stats.rs  status.rs  trigger.rs  triggers.rs  ui.rs
src/service/: manager.rs  mod.rs  runner.rs  service.rs  webhooks.rs
src/service/targets/: autopulse.rs  command.rs  emby.rs  fileflows.rs  jellyfin.rs  mod.rs  plex.rs  radarr.rs  sonarr.rs  tdarr.rs
src/service/triggers/: inotify.rs  lidarr.rs  manual.rs  mod.rs  notify.rs  radarr.rs  readarr.rs  sonarr.rs
src/service/webhooks/: discord.rs  manager.rs  mod.rs
src/settings/: app.rs  auth.rs  mod.rs  opts.rs  rewrite.rs  target.rs  timer.rs  trigger.rs  webhook.rs
src/targets/: jellyfin.rs  plex.rs
src/tests/: mod.rs
src/tests/triggers/: lidarr.rs  mod.rs  notify.rs  radarr.rs  readarr.rs  sonarr.rs
src/tests/utils/: check_auth.rs  checksum.rs  generate_uuid.rs  get_url.rs  join_path.rs  mod.rs  rewrite.rs  sify.rs
src/triggers/: radarr.rs  sonarr.rs
src/utils/: check_auth.rs  checksum.rs  cli.rs  conn.rs  generate_uuid.rs  get_timestamp.rs  get_url.rs  join_path.rs  logs.rs  mod.rs  rewrite.rs  settings.rs  sify.rs  task_manager.rs  timer.rs
ui/: .dockerignore  .gitignore  .yarnrc.yml  Dockerfile  Dockerfile.build  biome.json  flake.nix  package.json  shell.nix  svelte.config.js  uno.config.ts  vite.config.ts
ui/src/: app.d.ts  hooks.server.ts
ui/src/lib/: auth.ts  encrypt.ts  forced.ts
ui/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
ui/src/routes/add/: +page.svelte  (+1 more)
unraid/: autopulse.xml
(+6 files in other folders)
