[package]
name = "autopulse-database"
edition = "2021"
build = "src/build.rs"

version.workspace = true

[features]
postgres = ["diesel/postgres", "diesel_migrations/postgres", "dep:pq-sys"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite", "dep:libsqlite3-sys"]
vendored = ["pq-sys/bundled", "libsqlite3-sys/bundled"]

[dependencies]
# Crates
autopulse-utils = { workspace = true }

# Core
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Database
diesel = { version = "2.2.7", default-features = false, features = [
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
    "chrono",
] }
diesel_migrations = { version = "2.2.0", default-features = false }

# Connectors
pq-sys = { version = "0.7.0", optional = true }
libsqlite3-sys = { version = "0.36.0", optional = true }
# mysqlclient-sys = "x.x.x"
