[package]
name = "autopulse-database"
edition = "2021"
build = "src/build.rs"

version.workspace = true

[features]
postgres = ["diesel/postgres", "diesel_migrations/postgres", "dep:pq-sys"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "dep:libsqlite3-sys"]
mysql = ["diesel/mysql", "diesel_migrations/mysql", "dep:mysqlclient-sys"]
vendored = ["pq-sys?/bundled", "libsqlite3-sys?/bundled", "mysqlclient-sys?/bundled", "openssl-sys/vendored"]

[dependencies]
# Crates
autopulse-utils = { workspace = true }

# Core
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Database
diesel = { version = "2.3.6", default-features = false, features = [
    "r2d2",
    "chrono",
] }
diesel_migrations = { version = "2.3.0", default-features = false }

# Connectors
pq-sys = { version = ">=0.6.0", optional = true } # version pinned by diesel
libsqlite3-sys = { version = ">=0.17.2", optional = true } # version pinned by diesel
mysqlclient-sys = { version = ">=0.4.0", optional = true } # version pinned by diesel
openssl-sys = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
