[package]
name = "autopulse-server"
edition = "2021"
build = "src/build.rs"

version.workspace = true

[dependencies]
# Crates
autopulse-service = { workspace = true }
autopulse-utils = { workspace = true }
autopulse-database = { workspace = true }

# Core
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Web server
actix-web = { version = "4.9.0", default-features = false, features = [
    # disable actix-web's zstd feature because it can't be vendored yet
    "compat",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "http2",
    "macros",
    "unicode",
] }
actix-web-httpauth = "0.8.2"
toml = "1.0.0"
