[package]
name = "autopulse-server"
edition = "2021"
build = "src/build.rs"
version = "1.6.0"

[features]
sqlite = []
postgres = []

[dependencies]
# Crates
autopulse-service = { workspace = true , version = "1.6.0" }
autopulse-utils = { workspace = true , version = "1.6.0" }
autopulse-database = { workspace = true , version = "1.6.0" }

# Core
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Web server
actix-web = { version = "4.9.0", default-features = false, features = [
    # disable actix-web's zstd feature because it can't be vendored yet
    "compat",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "http2",
    "macros",
    "unicode",
] }
actix-web-httpauth = "0.8.2"
toml = "1.0.0"
