[package]
name = "autopulse-service"
edition = "2021"

version.workspace = true

[features]
vendored = []

[dependencies]
# Crates
autopulse-database = { workspace = true }
autopulse-utils = { workspace = true }

# Core
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "process"] }
futures = { workspace = true }

# HTTP client
reqwest = { version = "0.13.0", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls",
    "stream",
    "system-proxy",
] }

# Credential encoding
base64 = "0.22.1"

# Config
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }

# File system notifications
notify-debouncer-full = "0.7.0"

# HTML encoding
html-escape = "0.2"

# Other
struson = { version = "0.7.0", features = [
    "simple-api",
    "serde",
] } # Parse Jellyfin response as a stream

[dev-dependencies]
tempfile = "3"
