[package]
name = "autopulse-utils"
edition = "2021"

version.workspace = true

[dev-dependencies]
serde_json = { workspace = true }

[dependencies]
# Core
anyhow = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true }

# Logs
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "local-time",
    "time",
] }

# Hashing
sha2 = "0.10.8"

# Rewrites
regex = "1.11.1"

# UUID
uuid = { version = "1.14.0", features = ["v4"] }

# Logging
tracing-appender = "0.2.3"
